2014-08-01  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Fix previous change.

2014-07-22  Roland Winkler  <winkler@gnu.org>
	* lisp/Makefile.am: Do not load init files or site files for byte
	compilation (Bug#42482). Use long options.
	* lisp/makefile-temp: Ditto.  New variable emacs_compile.

2014-05-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-redisplay-record): Delete record from
	bbdb-records if record is undisplayed.
	* lisp/bbdb-com.el (bbdb-omit-record): Simplify. Handle records at
	beginning and end of bbdb-buffer properly.

2014-05-15  Roland Winkler  <winkler@gnu.org>
	Fix and improve previous patch.
	* lisp/bbdb.el (bbdb-update-unchanged-records): Renamed from
	bbdb-save-unchanged-records.
	(bbdb-with-print-loadably): Put at beginning of bbdb.el.
	(bbdb-change-record): Return record only if we updated it.
	* lisp/bbdb-com.el (bbdb-touch-records): Use
	bbdb-update-unchanged-records.
	(bbdb-insert-field, bbdb-edit-field): Issue message if record
	remained unchanged.

2014-05-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-change-record): If an editing command did not
	change a record compared to its value in bbdb-buffer, do not call
	bbdb-change-hook and do not save it.
	(bbdb-save-unchanged-records): New internal variable.
	* lisp/bbdb-com.el (bbdb-touch-records): New command.

2014-05-12  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Create bbdb-pkg.el from bbdb-pkg.el.in.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	Do not treat bbdb-change-hook special when inside
	bbdb-notice-mail-hook or bbdb-notice-record-hook.
	* lisp/bbdb.el (bbdb-notice-mail-hook, bbdb-notice-record-hook):
	Update docstring.
	(bbdb-notice-hook-pending): Remove.
	(bbdb-change-record): Always call bbdb-change-hook if a record was
	changed.
	* lisp/bbdb-mua.el (bbdb-update-records, bbdb-annotate-message):
	Change accordingly.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	Allow arbitrary lisp expressions as values of xfields.